@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.7131 2004/09/10 16:30:30 reinoud Exp $
+$NetBSD: CHANGES,v 1.7132 2004/09/10 16:33:57 uebayasi Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -4227,3 +4227,4 @@ Changes to the packages collection and infrastructure in 2004:
 	Updated gcal to 3.01nb2 [atatat 2004-09-10]
 	Updated udfclient to 0.3nb1 [reinoud 2004-09-10]
 	Removed libg++ [wiz 2004-09-10]
+	Updated flim to 1.14.6 [uebayasi 2004-09-10]
